[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
didkit = { version = "0.6", features = ["http-did"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
iso8601-timestamp = "*"
async-std = "1.12.0"
